reformat code to more standard 4 spaces